# Trotl

./: .editorconfig  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
app/: analysis_options.yaml  melos.yaml  pubspec.yaml
app/app/: .gitignore  README.md  analysis_options.yaml  env.example.json  pubspec.yaml
app/app/android/: build.gradle.kts
app/app/android/app/: build.gradle.kts
app/app/assets/audio/: CREDITS.md
app/app/assets/cars/3d/: ambulance.glb  firetruck.glb  garbage-truck.glb  hatchback-sports.glb  kart-oobi.glb  police.glb  race-future.glb  race.glb  sedan-sports.glb  sedan.glb  suv-luxury.glb  suv.glb  taxi.glb  van.glb
app/app/lib/: main.dart
app/app/lib/src/: app.dart  game_shell.dart
app/app/lib/src/audio/: sfx.dart
app/app/lib/src/chain/: go_live.dart  markets.dart  network.dart  rent_reclaim.dart  tx_builder.dart
app/app/lib/src/engine/: live_ride_controller.dart  price_feed.dart  ride_controller.dart
app/app/lib/src/scene/: hill_scene.dart
app/app/lib/src/screens/: arming_screen.dart  connect_sheet.dart  countdown_screen.dart  garage_screen.dart  grid_screen.dart  onboarding_screen.dart  paddock_screen.dart  pit_bay_screen.dart  race_screen.dart  results_screen.dart  season_screen.dart  settings_screen.dart  share_overlay.dart  title_screen.dart
app/app/lib/src/theme/: theme_controller.dart  tokens.dart
app/app/lib/src/util/: format.dart  open_url.dart  responsive.dart  session_history.dart
app/app/lib/src/wallet/: flash_funding.dart  flash_session.dart  mwa_wallet.dart  wallet_backend.dart  (+3 more)
app/app/test/: flash_funding_test.dart  flash_session_test.dart  markets_test.dart  smoke_test.dart  tx_builder_test.dart
app/app/web/: index.html  manifest.json  wallet.js
docs/: ARCHITECTURE.md  FEASIBILITY.md  M0-SPIKE-RESULTS.md  PRODUCT.md  ROADMAP.md  VERSIONS.md
docs/diagrams/: README.md  architecture.excalidraw  architecture.mmd  reconciler-fsm.mmd  ride-lifecycle.excalidraw  ride-lifecycle.mmd
docs/research/: flash.md  flutter.md  magicblock.md  program.md  web.md
fixtures/flash/: close_position_result.json  close_position_unsigned.json  delegate_basket_result.json  delegate_basket_unsigned.json  deposit_direct_result.json  deposit_direct_unsigned.json  execute_withdrawal_unsigned.json  health.json  init_basket_result.json  init_basket_unsigned.json  init_deposit_ledger_result.json  init_deposit_ledger_unsigned.json  init_ledger_built.json  open_position_result.json  open_position_unsigned.json  owner_state_after_close.json  owner_state_after_open.json  preview_open.json  price_sol.json  raw_basket_after_close.json  request_withdrawal_result.json  request_withdrawal_unsigned.json  tokens.json
programs/throtl-engine/: Anchor.toml
programs/throtl-engine-pin/: Cargo.toml  README.md
programs/throtl-engine-pin/src/: constants.rs  error.rs  instructions.rs  lib.rs  math.rs  oracle.rs  state.rs
programs/throtl-engine-pin/tests/: litesvm_adversarial.rs  litesvm_smoke.rs
programs/throtl-engine/keypairs/: .program-id
programs/throtl-engine/programs/throtl-engine/: Cargo.toml
programs/throtl-engine/programs/throtl-engine/src/: constants.rs  error.rs  lib.rs  math.rs  oracle.rs  state.rs
programs/throtl-engine/programs/throtl-engine/src/instructions/: close_ride.rs  delegate_ride.rs  freeze.rs  init_ride.rs  mod.rs  request_settle.rs  tick.rs
programs/throtl-engine/programs/throtl-engine/tests/: litesvm_suite.rs
services/guardian/: .env.example  README.md  package.json  pnpm-lock.yaml  railway.json  tsconfig.json
services/guardian/src/: accounting.ts  config.ts  fixedpoint.ts  index.ts  logger.ts  oracle.ts  ride.ts  store.ts  watcher.ts
services/guardian/test/: accounting.test.ts  ride.test.ts  watcher.test.ts
site/: README.md  app.js  index.html  styles.css  vercel.json
(+17 files in other folders)
