# Standalone workspace — isolated from the Anchor build so neither resolver touches the other.
[workspace]

[package]
name = "throtl-engine-pin"
version = "0.1.0"
description = "Throtl Engine (Pinocchio) — analog perps virtual-exposure engine, rewritten zero-dependency to slash deploy/rent cost while preserving the exact on-chain wire contract."
edition = "2021"
license = "MIT"

[lib]
# Distinct .so name from the Anchor crate so both can coexist during migration. Deploys to the SAME
# program id (YSaqfuc753…); the wire contract (discriminators + account byte-layout) is identical, so
# the Dart client is unchanged.
crate-type = ["cdylib", "lib"]
name = "throtl_engine_pin"

[features]
default = []

# `target_os = "solana"` only exists on the SBF target; register it so host builds don't warn.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
pinocchio = "0.10"
pinocchio-system = "0.5"
pinocchio-pubkey = { version = "0.3", features = ["const"] }
pinocchio-log = "0.5"
# MagicBlock ER, native (NON-Anchor). `delegation-actions` pulls pinocchio/alloc + pinocchio/cpi +
# magicblock-delegation-program-api for the delegate / commit / undelegate CPIs.
ephemeral-rollups-pinocchio = { version = "0.15.4", features = ["delegation-actions"] }
# Same bytemuck as the Anchor build → identical RideSession Pod layout.
bytemuck = { version = "1.25", features = ["derive", "min_const_generics"] }

[dev-dependencies]
litesvm = "0.12"
solana-account = "3"
solana-clock = "3"
solana-instruction = "3"
solana-keypair = "3"
solana-message = "3"
solana-pubkey = "3"
solana-signer = "3"
solana-transaction = "3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
